# OauthAndOIDCFramework

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
auth_framework/: main.py
auth_framework/auth/: user.py
auth_framework/config/: models.py  settings.py
auth_framework/middleware/: session.py
auth_framework/oidc/: service.py
auth_framework/providers/: registry.py
auth_framework/routes/: auth.py  dependencies.py
auth_framework/saml/: service.py
auth_framework/sessions/: jwt.py
auth_framework/utils/: http.py  redirects.py
config/: providers.yaml
examples/: adp-saml-provider.yaml  azure-ad-oidc-provider.yaml  okta-oidc-provider.yaml
tests/: test_config.py
