[project]
name = "oauth-oidc-saml-framework"
version = "0.1.0"
description = "Reusable FastAPI authentication framework for SAML SP and OIDC providers."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "python3-saml>=1.16,<2.0",
  "authlib>=1.3,<2.0",
  "PyJWT>=2.8,<3.0",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "httpx>=0.26,<1.0",
  "itsdangerous>=2.1,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "PyYAML>=6.0,<7.0",
  "email-validator>=2.1,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "ruff>=0.4,<1.0"]
postgres = ["asyncpg>=0.29,<1.0", "sqlalchemy[asyncio]>=2.0,<3.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
